force-app/main/default/objects/Payment_Endpoint__mdt/Payment_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>Payment Endpoint</label>
    <pluralLabel>Payment Endpoints</pluralLabel>
</CustomObject>