force-app/main/default/objects/Payment_Endpoint__mdt/fields/Collection_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Name__c</fullName>
    <label>Collection Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>