force-app/main/default/objects/Payment_Endpoint__mdt/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <label>Payment Gateway</label>
    <referenceTo>Payment_Gateway__mdt</referenceTo>
    <relationshipLabel>Payment Endpoints</relationshipLabel>
    <relationshipName>Payment_Endpoints</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>