force-app/main/default/objects/Payment_Endpoint__mdt/fields/Response_Entity_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Response_Entity_Apex_Class__c</fullName>
    <inlineHelpText>Apex entity class name that extends RazorpayBaseEntity, which is also the return type of the Service Class.</inlineHelpText>
    <label>Response Entity Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>