force-app/main/default/objects/Payment_Endpoint__mdt/fields/Service_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Apex_Class__c</fullName>
    <inlineHelpText>Use this service class, which exposes static methods to interact with this endpoint.</inlineHelpText>
    <label>Service Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>