force-app/main/default/objects/Payment_Endpoint__mdt/fields/Service_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Method_Name__c</fullName>
    <inlineHelpText>Use this static method to interact with the endpoint, where the Apex class name is defined in the &quot;Service Apex Class&quot; field.</inlineHelpText>
    <label>Service Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>