force-app/main/default/objects/Payment_Endpoint__mdt/fields/Success_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Success_Response_Code__c</fullName>
    <inlineHelpText>Eg: 200,201,202,204</inlineHelpText>
    <label>Success Response Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>