force-app/main/default/objects/Payment_Endpoint__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Endpoint_URL__c</columns>
    <columns>Response_Entity_Apex_Class__c</columns>
    <columns>REST_Method__c</columns>
    <columns>Success_Response_Code__c</columns>
    <columns>Payment_Gateway__c</columns>
    <columns>Collection_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>