force-app/main/default/objects/Payment_Endpoint__mdt/listViews/Refund_API.listView-meta.xml
<ListView>
    <fullName>Refund_API</fullName>
    <columns>MasterLabel</columns>
    <columns>Endpoint_URL__c</columns>
    <columns>Response_Entity_Apex_Class__c</columns>
    <columns>REST_Method__c</columns>
    <columns>Success_Response_Code__c</columns>
    <columns>Payment_Gateway__c</columns>
    <columns>Collection_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Collection_Name__c</field>
        <operation>equals</operation>
        <value>Refund API</value>
    </filters>
    <label>Refund API</label>
</ListView>